--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3"></h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                        <h4 class="my-3">Webサービス制作</h4>
+                        <p class="text-muted">Ruby・RubyOnRailsを用いてのWebサービスの制作を行います。様々な機能を実装したサービスが作成できます。</p>
                     </div>
                 </div>
             </div>
